# -Kalponic-Studio-Toolbox-

./: .gitignore  CONVENTIONS.md  LICENSE  README.md  run_diagnostics.bat  run_enhanced_bg_remover.bat  temp_mw.txt  temp_view.txt
Apps/ImageResize/: ImageResize.py  README.md  pyproject.toml  run_cli.bat  run_image_resizer.bat
Apps/ImageResize/src/ks_image_resize/: __init__.py  config.py
Apps/ImageResize/tests/: __init__.py  test_cli.py  test_resizer.py
Apps/KS AutoModel/: KS AutoModel DesignDoc.md  pyproject.toml  requirements.txt
Apps/KS AutoModel/data/registries/: curated_models.json
Apps/KS AutoModel/src/ks_automodel/: __init__.py
Apps/KS AutoModel/test_project/: README.md  main.py
Apps/KS MetaMaker/: .gitignore  KS MetaMaker DesignDoc.md  README.md  create_profiles.py  full_integration_test.py  performance_test.py  pyproject.toml  scaffold.py  test_dynamic_loading.py  test_export.py  test_gui.py  test_image.txt  test_integration.py  test_normalization.py  test_processing.py
Apps/KS MetaMaker/app/: main.py
Apps/KS MetaMaker/configs/: config.yml
Apps/KS MetaMaker/configs/profiles/: civitai_lora.yml  custom.yml  huggingface_dataset.yml
Apps/KS MetaMaker/ks_metamaker/: __init__.py  context_metadata.py  dynamic_model_manager.py  export.py  hardware_detector.py  hardware_setup_dialog.py  ingest.py  model_downloader.py  model_recommender.py  organize.py  profile_manager.py  quality.py  rename.py  review_dialog.py  tag_normalizer.py  tagger.py
Apps/KS MetaMaker/ks_metamaker/registry/: __init__.py
Apps/KS MetaMaker/ks_metamaker/utils/: config.py
Apps/KS MetaMaker/scripts/: download_models.py  download_yolo.py  hardware_setup_demo.py
Apps/KS SnapStudio/: KS SnapStudio Desig Doc.md  README.md  pyproject.toml  requirements.txt  run_cli.bat  run_snapstudio.bat
Apps/KS SnapStudio/src/ks_snapstudio/: __init__.py
Apps/KS SnapStudio/tests/: __init__.py
Apps/KS SnapStudio/tests/integration/: __init__.py
Apps/KS SnapStudio/tests/unit/: __init__.py  test_core.py
Apps/KS Sprite Splitter/: Design.md  README.md  pyproject.toml  requirements.txt  run_gui.py
Apps/KS Sprite Splitter/app/: main_gui.py
Apps/KS Sprite Splitter/app/qss/: dark_theme.qss
Apps/KS Sprite Splitter/cli/: ks_splitter.py
Apps/KS Sprite Splitter/configs/: config.yml  tokens.yml
Apps/KS Sprite Splitter/ks_splitter/: __init__.py  matte.py  mock_backends.py  parts.py  pipeline.py  real_backends.py  segment.py
Apps/KS Sprite Splitter/scripts/: download_models.py  export_color_parts.py  run_pipeline_and_export.py
Apps/KS Sprite Splitter/templates/: arch.yml  char.yml  flag.yml  tree.yml  vfx.yml
Apps/KS Sprite Splitter/tests/: __init__.py  conftest.py  test_backends.py  test_gui.py  test_pipeline.py  test_templates.py
Apps/KS_CodeOps/: ENGINEERING_GUIDELINES.md  PLANNING.md  README.md  ROADMAP.md  STRATEGY_V4_APPLICATION.md  cli.py  dispatch.all.targets.json  dispatch.all.test.json  dispatch.all.testmode.json  dispatch.autotest.json  dispatch.codex.only.json  dispatch.codex.opencheck.json  dispatch.one.cline.json  dispatch.one.codex.json  dispatch.one.copilot.json  dispatch.one.gemini.json  dispatch.one.kilo.json  dispatch.retest.json  dispatch.sample.json  main.py  pyproject.toml  requirements.txt  run.bat  sequence.sample.json  target_health.json
Apps/KS_CodeOps/docs/: regression_checklist.md  troubleshooting.md
Apps/KS_CodeOps/generated_apps/_tmp_tiny_app_20260214_081733556/: README.md
Apps/KS_CodeOps/generated_apps/tiny_app/: main.py
Apps/KS_CodeOps/jobs/: _tmp_materializer_escape_20260214_081929507.md  _tmp_materializer_escape_fix_20260214_083918499.md
Apps/KS_CodeOps/jobs/_tmp_bad_validator_20260214_083943905/: log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/_tmp_fail_job_20260214_081825806/: log.txt  status.json
Apps/KS_CodeOps/jobs/_tmp_fail_job_fix_20260214_083857152/: log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/_tmp_init_job_20260214_081733556/: brief.md  design.md  plan.json
Apps/KS_CodeOps/jobs/_tmp_phase1_capture_test_20260214_081702939/: input.txt  log.txt  status.json
Apps/KS_CodeOps/jobs/_tmp_phase1_capture_test_20260214_081722153/: log.txt  status.json
Apps/KS_CodeOps/jobs/_tmp_resume_bug_20260214_081838116/: log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/_tmp_resume_fix_20260214_083909195/: log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/_tmp_simple_app_test_20260214_081702972/: log.txt  status.json
Apps/KS_CodeOps/jobs/completion_fresh_test/: log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/ks_pdf_studio_v2/: brief.md  design.md  log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/phase1_capture_test/: log.txt  plan.json  status.json
Apps/KS_CodeOps/jobs/simple_app_test/: ai_response.txt  log.txt  plan.json  status.json
Apps/KS_CodeOps/scripts/: part_done.bat  part_done.ps1  roadmap_sync_checks.json  sync_roadmap.py
Apps/KS_CodeOps/src/: __init__.py
Apps/KS_CodeOps/src/automation/: __init__.py  factory.py  vscode_automation.py  vscode_automation_uia.py
Apps/KS_CodeOps/src/core/: __init__.py  assignment_policy.py  capture_runtime.py  config.py  input_verifier.py  job_runner.py  lane_runtime.py  materializer.py  multi_lane_dispatcher.py  plan_builder.py  runtime_scheduler.py  sequencer.py  step_validator.py  target_activation.py  worker_contract.py
Apps/KS_CodeOps/src/gui/: __init__.py  main_window.py
Apps/KS_CodeOps/tests/: test_cli_init_job_contract_mode.py  test_cli_release_commands.py  test_cli_run_job_exit.py  test_job_runner_cline_adapter.py  test_job_runner_codex_adapter.py  test_job_runner_copilot_adapter.py  test_job_runner_gemini_adapter.py  test_job_runner_kilo_adapter.py  test_job_runner_lane_runtime.py  test_job_runner_parallel_lanes.py  test_job_runner_resume.py  test_job_runner_worker_contract.py  test_lane_runtime.py  test_materializer.py  test_multi_lane_dispatcher.py  test_plan_builder_contract_mode.py  test_runtime_scheduler.py  test_sequencer_config_mutation.py  test_step_validator.py
Apps/KS_CodeOps/vscode_bridge_extension/: README.md  extension.js  package.json
(+446 files in other folders)
